plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.moondap'
version = '0.0.1-SNAPSHOT'
description = 'moondap project'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// db setting
	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
	
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// 입력값 검증 (@NotBlank, @Size 등)
	// starter-web 에 포함되지 않으므로 명시적으로 추가한다.
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// 캐시 (메인 페이지 통합 조회 쿼리 부하 완화)
	// Caffeine 을 쓰는 이유: 스프링 기본 ConcurrentMapCacheManager 는 TTL 이 없어
	// 한 번 담긴 값이 영원히 남는다. 캐시별로 다른 만료 시간이 필요하다.
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'com.github.ben-manes.caffeine:caffeine'
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'com.fasterxml.jackson.core:jackson-core'
	implementation 'com.fasterxml.jackson.core:jackson-annotations'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	
	// lombok
	compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
	
	// 타임리프 다이얼렉트 레이아웃
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
	
	// 스프링 시큐리티를 위한 추가 [260319]
	// 1. 스프링 시큐리티 핵심 기능
    implementation 'org.springframework.boot:spring-boot-starter-security'
    // 2. 타임리프에서 시큐리티 문법(sec:authorize 등)을 쓰기 위한 확장 라이브러리
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    // 3. 보안 기능 테스트를 위한 라이브러리
    testImplementation 'org.springframework.security:spring-security-test'
}

// WAR 빌드 시 DevTools 제외 설정
tasks.named('bootWar') {
    archiveFileName = 'ROOT.war'
    // production 빌드 시 devtools 제외를 명시적으로 보장
    exclude '**/spring-boot-devtools-*.jar'
}

tasks.named('war') {
    // 일반 war 태스크에서도 제외
    exclude '**/spring-boot-devtools-*.jar'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs.add("-parameters")
}